Creation of Greeting class.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 greeting-name=Dakota
-greeting-coffee={$greeting-name} is drinking Cafe Cereza coffee today. 
+greeting-coffee=${greeting-name} is drinking Cafe Cereza coffee today. 
 
