Added droid class and controller.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-greeting-name=Dakota
-greeting-coffee=${greeting-name} is drinking Cafe Cereza coffee today. 
+greeting.name=Dakota
+greeting.coffee=${greeting.name} is drinking Cafe Cereza today. 
+
+droid.id=BB-8
+droid.description=BB-8 is a spherical droid. Doesn't drink coffee, yet. 
+
 
