Added actuator dependency.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ greeting.name=Dakota
 greeting.coffee=${greeting.name} is drinking Cafe Cereza today. 
 
 droid.id=BB-8
-droid.description=BB-8 is a spherical droid. Doesn't drink coffee, yet. 
+droid.description=BB-8 is a spherical droid. Doesn't drink coffee, yet.
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 
 
